@@ -38,7 +38,7 @@ public class DefaultTaxProviderFactory implements ITaxProviderFactory {
 			{
 				Class<?> ppClass = Class.forName(className);
 				if (ppClass != null)
-					myCalculator = (ITaxProvider) ppClass.newInstance();
+					myCalculator = (ITaxProvider) ppClass.getDeclaredConstructor().newInstance();
 			} 
 			catch (Error e1) 
 			{   //  NoClassDefFound
