@@ -229,7 +229,7 @@ public final class MLocatorLookup extends Lookup implements Serializable
 		//
 		int key = loc.getM_Locator_ID();
 		if (saveInCache)
-			m_lookup.put(new Integer(key), loc);
+			m_lookup.put(Integer.valueOf(key), loc);
 		NamePair retValue = new KeyNamePair(key, loc.toString());
 		return retValue;
 	}	//	getDirect
@@ -375,7 +375,7 @@ public final class MLocatorLookup extends Lookup implements Serializable
 				{
 					int M_Locator_ID = rs.getInt(1);
 					MLocator loc = MLocator.get(m_ctx, M_Locator_ID);
-					m_lookup.put(new Integer(M_Locator_ID), loc);
+					m_lookup.put(Integer.valueOf(M_Locator_ID), loc);
 				}
 			}
 			catch (SQLException e)
