@@ -45,7 +45,7 @@ public class StandardTaxProvider implements ITaxProvider {
 		{
 			MOrderLine line = lines[i];
 			totalLines = totalLines.add(line.getLineNetAmt());
-			Integer taxID = new Integer(line.getC_Tax_ID());
+			Integer taxID = Integer.valueOf(line.getC_Tax_ID());
 			if (!taxList.contains(taxID))
 			{
 				MTax tax = new MTax(order.getCtx(), taxID, order.get_TrxName());
@@ -302,7 +302,7 @@ public class StandardTaxProvider implements ITaxProvider {
 		{
 			MRMALine line = lines[i];
 			totalLines = totalLines.add(line.getLineNetAmt());
-			Integer taxID = new Integer(line.getC_Tax_ID());
+			Integer taxID = Integer.valueOf(line.getC_Tax_ID());
 			if (!taxList.contains(taxID))
 			{
 				MTax tax = new MTax(rma.getCtx(), taxID, rma.get_TrxName());
