@@ -147,7 +147,7 @@ public final class DB
 		try
 		{
 			Class<?> clazz = Class.forName("org.compiere.MigrateData");
-			clazz.newInstance();
+			clazz.getDeclaredConstructor().newInstance();
 		}
 		catch (Exception e)
 		{
@@ -961,7 +961,7 @@ public final class DB
 	 */
 	public static int executeUpdate (String sql, int param, String trxName, int timeOut)
 	{
-		return executeUpdate (sql, new Object[]{new Integer(param)}, false, trxName, timeOut);
+		return executeUpdate (sql, new Object[]{Integer.valueOf(param)}, false, trxName, timeOut);
 	}	//	executeUpdate
 
 	/**
@@ -990,7 +990,7 @@ public final class DB
 	 */
 	public static int executeUpdate (String sql, int param, boolean ignoreError, String trxName, int timeOut)
 	{
-		return executeUpdate (sql, new Object[]{new Integer(param)}, ignoreError, trxName, timeOut);
+		return executeUpdate (sql, new Object[]{Integer.valueOf(param)}, ignoreError, trxName, timeOut);
 	}	//	executeUpdate
 
 	/**
