@@ -220,47 +220,47 @@ public class ARequest implements ActionListener
 		{
 			GridTab tab = frame.getAPanel().getCurrentTab();
 			tab.dataNew (false);
-			tab.setValue("AD_Table_ID", new Integer(m_AD_Table_ID));
-			tab.setValue("Record_ID", new Integer(m_Record_ID));
+			tab.setValue("AD_Table_ID", Integer.valueOf(m_AD_Table_ID));
+			tab.setValue("Record_ID", Integer.valueOf(m_Record_ID));
 			//
 			if (m_C_BPartner_ID != 0)
-				tab.setValue("C_BPartner_ID", new Integer(m_C_BPartner_ID));
+				tab.setValue("C_BPartner_ID", Integer.valueOf(m_C_BPartner_ID));
 			//
 			if (m_AD_Table_ID == MBPartner.Table_ID)
-				tab.setValue("C_BPartner_ID", new Integer(m_Record_ID));
+				tab.setValue("C_BPartner_ID", Integer.valueOf(m_Record_ID));
 			else if (m_AD_Table_ID == MUser.Table_ID)
-				tab.setValue("AD_User_ID", new Integer(m_Record_ID));
+				tab.setValue("AD_User_ID", Integer.valueOf(m_Record_ID));
 			//
 			else if (m_AD_Table_ID == MProject.Table_ID)
-				tab.setValue("C_Project_ID", new Integer(m_Record_ID));
+				tab.setValue("C_Project_ID", Integer.valueOf(m_Record_ID));
 			else if (m_AD_Table_ID == MAsset.Table_ID)
-				tab.setValue("A_Asset_ID", new Integer(m_Record_ID));
+				tab.setValue("A_Asset_ID", Integer.valueOf(m_Record_ID));
 			//
 			else if (m_AD_Table_ID == MOrder.Table_ID)
-				tab.setValue("C_Order_ID", new Integer(m_Record_ID));
+				tab.setValue("C_Order_ID", Integer.valueOf(m_Record_ID));
 			else if (m_AD_Table_ID == MInvoice.Table_ID)
-				tab.setValue("C_Invoice_ID", new Integer(m_Record_ID));
+				tab.setValue("C_Invoice_ID", Integer.valueOf(m_Record_ID));
 			//
 			else if (m_AD_Table_ID == MProduct.Table_ID)
-				tab.setValue("M_Product_ID", new Integer(m_Record_ID));
+				tab.setValue("M_Product_ID", Integer.valueOf(m_Record_ID));
 			else if (m_AD_Table_ID == MPayment.Table_ID)
-				tab.setValue("C_Payment_ID", new Integer(m_Record_ID));
+				tab.setValue("C_Payment_ID", Integer.valueOf(m_Record_ID));
 			//
 			else if (m_AD_Table_ID == MInOut.Table_ID)
-				tab.setValue("M_InOut_ID", new Integer(m_Record_ID));
+				tab.setValue("M_InOut_ID", Integer.valueOf(m_Record_ID));
 			else if (m_AD_Table_ID == MRMA.Table_ID)
-				tab.setValue("M_RMA_ID", new Integer(m_Record_ID));
+				tab.setValue("M_RMA_ID", Integer.valueOf(m_Record_ID));
 			//
 			else if (m_AD_Table_ID == MCampaign.Table_ID)
-				tab.setValue("C_Campaign_ID", new Integer(m_Record_ID));
+				tab.setValue("C_Campaign_ID", Integer.valueOf(m_Record_ID));
 			//
 			else if (m_AD_Table_ID == MRequest.Table_ID)
-				tab.setValue(MRequest.COLUMNNAME_R_RequestRelated_ID, new Integer(m_Record_ID));
+				tab.setValue(MRequest.COLUMNNAME_R_RequestRelated_ID, Integer.valueOf(m_Record_ID));
 			// FR [2842165] - Order Ref link from SO line creating new request
 			else if (m_AD_Table_ID == MOrderLine.Table_ID) {
 				MOrderLine oLine = new MOrderLine(Env.getCtx(), m_Record_ID, null);
 				if (oLine != null) {
-					tab.setValue(MOrderLine.COLUMNNAME_C_Order_ID, new Integer(oLine.getC_Order_ID()));
+					tab.setValue(MOrderLine.COLUMNNAME_C_Order_ID, Integer.valueOf(oLine.getC_Order_ID()));
 				}
 			}
 		}
