@@ -97,11 +97,11 @@ public final class AppsAction extends AbstractAction
 		int pos = toolTipText.indexOf('&');
 		if (pos != -1  && toolTipText.length() > pos)	//	We have a nemonic - creates ALT-_
 		{
-			Character ch = new Character(toolTipText.toUpperCase().charAt(pos+1));
+			Character ch = Character.valueOf(toolTipText.toUpperCase().charAt(pos+1));
 			if (ch != ' ')
 			{
 				toolTipText = toolTipText.substring(0, pos) + toolTipText.substring(pos+1);
-				putValue(Action.MNEMONIC_KEY, new Integer(ch.hashCode()));
+				putValue(Action.MNEMONIC_KEY, Integer.valueOf(ch.hashCode()));
 			}
 		}
 		//
@@ -126,7 +126,7 @@ public final class AppsAction extends AbstractAction
 		putValue(Action.SHORT_DESCRIPTION, toolTipText);	//	Tooltip
 		putValue(Action.ACTION_COMMAND_KEY, m_action);      //  ActionCammand
 		putValue(Action.ACCELERATOR_KEY, accelerator);      //  KeyStroke
-	//	putValue(Action.MNEMONIC_KEY, new Integer(0));      //  Mnemonic
+	//	putValue(Action.MNEMONIC_KEY, Integer.valueOf(0));      //  Mnemonic
 	//	putValue(Action.DEFAULT, text);						//	Not Used
 
 		//	Create Button
