@@ -134,7 +134,7 @@ public class WPaymentFormCash extends PaymentFormCash implements EventListener<E
 		bDateField.setValue(m_DateAcct);
 		
 		// Is the currency an EMU currency?
-		Integer C_Currency_ID = new Integer(m_C_Currency_ID);
+		Integer C_Currency_ID = Integer.valueOf(m_C_Currency_ID);
 		if (s_Currencies.containsKey(C_Currency_ID)) {
 			Enumeration<Integer> en = s_Currencies.keys();
 			while (en.hasMoreElements()) {
