@@ -427,7 +427,7 @@ public class WLocatorEditor extends WEditor implements EventListener<Event>, Pro
 		if (M_Locator_ID == 0)
 			return false;
 
-		setValue (new Integer(M_Locator_ID), true);
+		setValue (Integer.valueOf(M_Locator_ID), true);
 		return true;
 	} // actionText
 	
